[package]
name = "lister"
version = "0.1.0"
authors = ["Rade Radišić <radisic.rade@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
csv = "1"
serde = "1"
serde_derive = "1"
